Database updates for GisRecord enhancements New files added - [GisTransactionServiceImpl.java,GisTransactionService.java,GisTransactionDao.java,GisTransaction.java,GisTransactionController.java] Files modified - [cx2_published_dataModel.json,VendorServiceImpl.java,ProjectsService.java,ProjectsServiceImpl.java,MunicipalitiesController.java,Projects.java,FormTypesService.java,UsersController.java,InspectionDesignServiceImpl.java,GisrecordsServiceImpl.java,Municipalities.java,MunicipalitiesServiceImpl.java,InspectionDesignController.java,GisrecordsService.java,FormTypesServiceImpl.java,Vendor.java,VendorService.java,InspectionDesignService.java,FormTypesController.java,FormTypes.java,VendorController.java,UsersService.java,Users.java,GisrecordsController.java,pom.xml,Gisrecords.java,ProjectsController.java,UsersServiceImpl.java,InspectionDesign.java,MunicipalitiesService.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -218,6 +218,9 @@
   }, {
     "table" : "VendorLicenseTypes",
     "schema" : "cx2"
+  }, {
+    "table" : "GisTransaction",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
