--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/InspectionOutcomeUpdate/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/InspectionService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -212,6 +219,7 @@
                         </goals>
                         <configuration>
                             <sources>
+                            
                                 <source>services/AddMultipleFeeToCart/src</source>
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/DocumentProxyService/src</source>
@@ -221,6 +229,7 @@
                                 <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
                                 <source>services/FormStatusUpdate/src</source>
+                                <source>services/InspectionOutcomeUpdate/src</source>
                                 <source>services/InspectionService/src</source>
                                 <source>services/MapMultipleFeesWithTransaction/src</source>
                                 <source>services/ProjectMessagingMailService/src</source>
