--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -18,19 +18,22 @@
     "table" : "CaseStatuses",
     "schema" : "cx2"
   }, {
+    "table" : "CaseTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "CodeList",
     "schema" : "cx2"
   }, {
     "table" : "CodeSets",
     "schema" : "cx2"
   }, {
-    "table" : "CaseTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "CodesToForm",
     "schema" : "cx2"
   }, {
     "table" : "CodesToInspection",
+    "schema" : "cx2"
+  }, {
+    "table" : "ContractorTypes",
     "schema" : "cx2"
   }, {
     "table" : "Document",
@@ -42,58 +45,52 @@
     "table" : "FormCategories",
     "schema" : "cx2"
   }, {
-    "table" : "ContractorTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "FormCategoryMapping",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormHistory",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormStatuses",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormTypes",
     "schema" : "cx2"
   }, {
     "table" : "FormDraft",
     "schema" : "cx2"
   }, {
-    "table" : "FormMessages",
+    "table" : "FormFieldTypes",
     "schema" : "cx2"
   }, {
-    "table" : "FormFieldTypes",
+    "table" : "FormHistory",
     "schema" : "cx2"
   }, {
     "table" : "FormMessageTagging",
     "schema" : "cx2"
   }, {
-    "table" : "FormsToInspections",
+    "table" : "FormMessages",
     "schema" : "cx2"
   }, {
-    "table" : "FormTypeFields",
+    "table" : "FormStatuses",
     "schema" : "cx2"
   }, {
     "table" : "FormToInspectionCategoryMapping",
     "schema" : "cx2"
   }, {
+    "table" : "FormTypeFields",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormsToInspections",
+    "schema" : "cx2"
+  }, {
     "table" : "GIS2Forms",
     "schema" : "cx2"
   }, {
-    "table" : "GISRecords",
+    "table" : "GisTransaction",
     "schema" : "cx2"
   }, {
     "table" : "GISContacts",
     "schema" : "cx2"
   }, {
+    "table" : "GISRecords",
+    "schema" : "cx2"
+  }, {
     "table" : "GlobalSettings",
-    "schema" : "cx2"
-  }, {
-    "table" : "InspectionDesign",
-    "schema" : "cx2"
-  }, {
-    "table" : "GisTransaction",
     "schema" : "cx2"
   }, {
     "table" : "Holidays",
@@ -102,7 +99,16 @@
     "table" : "InspectionCategories",
     "schema" : "cx2"
   }, {
+    "table" : "InspectionCategoryMapping",
+    "schema" : "cx2"
+  }, {
+    "table" : "InspectionDesign",
+    "schema" : "cx2"
+  }, {
     "table" : "InspectionGis",
+    "schema" : "cx2"
+  }, {
+    "table" : "InspectionHistory",
     "schema" : "cx2"
   }, {
     "table" : "InspectionOutcome",
@@ -117,6 +123,9 @@
     "table" : "LetterTemplates",
     "schema" : "cx2"
   }, {
+    "table" : "ManualFeeTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "MasterCases",
     "schema" : "cx2"
   }, {
@@ -126,16 +135,10 @@
     "table" : "MasterInspections",
     "schema" : "cx2"
   }, {
-    "table" : "Municipalities",
-    "schema" : "cx2"
-  }, {
-    "table" : "ManualFeeTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "MasterProjects",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionCategoryMapping",
+    "table" : "Municipalities",
     "schema" : "cx2"
   }, {
     "table" : "MunicipalityGroupMembers",
@@ -144,13 +147,13 @@
     "table" : "MunicipalityGroups",
     "schema" : "cx2"
   }, {
+    "table" : "MyCart",
+    "schema" : "cx2"
+  }, {
     "table" : "PaymentHistory",
     "schema" : "cx2"
   }, {
     "table" : "ProjectForms",
-    "schema" : "cx2"
-  }, {
-    "table" : "Projects",
     "schema" : "cx2"
   }, {
     "table" : "ProjectGISRecords",
@@ -162,28 +165,22 @@
     "table" : "ProjectTasks",
     "schema" : "cx2"
   }, {
+    "table" : "Projects",
+    "schema" : "cx2"
+  }, {
     "table" : "Roles",
     "schema" : "cx2"
   }, {
     "table" : "SharedWith",
     "schema" : "cx2"
   }, {
-    "table" : "MyCart",
-    "schema" : "cx2"
-  }, {
     "table" : "StandardViews",
     "schema" : "cx2"
   }, {
-    "table" : "Subdivisions",
-    "schema" : "cx2"
-  }, {
-    "table" : "Users",
-    "schema" : "cx2"
-  }, {
-    "table" : "Vendor",
-    "schema" : "cx2"
-  }, {
     "table" : "States",
+    "schema" : "cx2"
+  }, {
+    "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
     "table" : "TransactionToFees",
@@ -198,13 +195,25 @@
     "table" : "UserViewPreferences",
     "schema" : "cx2"
   }, {
+    "table" : "Users",
+    "schema" : "cx2"
+  }, {
+    "table" : "Vendor",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorAdmins",
     "schema" : "cx2"
   }, {
     "table" : "VendorApprovals",
     "schema" : "cx2"
   }, {
+    "table" : "VendorLicenseTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorLicenses",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
     "table" : "Vendors2Form",
@@ -214,12 +223,6 @@
     "schema" : "cx2"
   }, {
     "table" : "Violations",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorUsers",
-    "schema" : "cx2"
-  }, {
-    "table" : "VendorLicenseTypes",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
