Create Case changes Files modified - [GetFormTypesByCategoriesAndMunicipalitiesResponse.java,pages-config.json,Main.html,QueryExecutionController.java,cx2-queries.hbm.xml,Cx2QueryExecutorService_V1.java,UserOpenForms.html,Cx2QueryExecutorServiceImpl.java,MyCart.js,CodeEnforcementDashboard.html,CodeEnforcementDashboard.js,cx2_query.json,newFormDialog.variables.json,UserClosedForms.html,Cx2QueryExecutorService.java,Cx2QueryExecutorServiceImpl_V1.java]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -370,6 +370,9 @@
   }, {
     "name" : "dialogName",
     "type" : "string"
+  }, {
+    "name" : "isCase",
+    "type" : "boolean"
   } ]
 }, {
   "name" : "rightnav",
