- Form dialogs that work. New files added - [_viewInspection.js,_viewInspection.html,_viewInspection.variables.json,_viewInspection.css,_viewForm] Files modified - [ScheduleInspections.js,ViewInspection.css,ViewInspection.js,pages-config.json,FindForm.html,FindForm.js,MyCart.html,_viewInspection.html,_viewInspection.variables.json,Forms.html,ViewInspection.variables.json,Forms.js,ViewInspection.html,MyCart.js,Forms.variables.json,pom.xml,Forms.css]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -340,6 +340,20 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "_viewForm",
+  "type" : "PARTIAL",
+  "params" : [ {
+    "name" : "FormGUID",
+    "type" : "string"
+  } ]
+}, {
+  "name" : "_viewInspection",
+  "type" : "PARTIAL",
+  "params" : [ {
+    "name" : "inspectionGuid",
+    "type" : "string"
+  } ]
+}, {
   "name" : "dynamicFieldEditor",
   "type" : "PARTIAL",
   "params" : [ {
