- Violations work and table/column name normalization New files added - [Code.java,CodeService.java,CodeServiceImpl.java,CodeDao.java,CodeController.java] Files modified - [_viewInspection.js,cx2_published_dataModel.json,CodeSetsController.java,_viewInspection.html,EditInspection.html,ViolationsServiceImpl.java,_viewInspection.variables.json,LetterTemplatesServiceImpl.java,ViolationsController.java,CodeSetsService.java,UsersController.java,UsersService.java,Users.java,CodesToForm.java,LetterTemplatesController.java,CodeSetsServiceImpl.java,pom.xml,CodeSets.java,Violations.java,EditInspection.variables.json,UsersServiceImpl.java,db-connection-settings.json,CodesToInspection.java,LetterTemplates.java] Removed files - [CodeListController.java,CodeList.java,CodeListServiceImpl.java,CodeListDao.java,CodeListService.java]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -18,9 +18,6 @@
     "table" : "CaseStatuses",
     "schema" : "cx2"
   }, {
-    "table" : "CodeList",
-    "schema" : "cx2"
-  }, {
     "table" : "CodeSets",
     "schema" : "cx2"
   }, {
@@ -223,6 +220,9 @@
     "schema" : "cx2"
   }, {
     "table" : "VendorLicenseTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "Code",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
