Manual Payments- Comments Files modified - [DevFormDataEntry.js,log4j.properties,MunicipalityCheckOut.js,DevFormDataEntry.variables.json,DevFormDataEntry.html]

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -49,6 +49,9 @@ com.wavemaker.runtime.web.filter.WMRequestCleanupFilter = info
 # log HQL query parser activity
 #log4j.logger.org.hibernate.hql.ast.AST=warn
 
+log4j.logger.org.hibernate.SQL=DEBUG
+log4j.logger.org.hibernate.type=TRACE
+
 # log schema export/update
 #log4j.logger.org.hibernate.tool.hbm2ddl=debug
 
