CodeSet and Code changes according to changes made in DB Files modified - [MunicipalityCodeSets,CXCodeSets,CXCodeList,MunicipalityCodeList,cx2,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -309,7 +309,7 @@
     "dataSet" : [ {
       "type" : "integer",
       "target" : "CodeSetId",
-      "value" : "bind:Widgets.gridCodeSets.selecteditem.codeSetId"
+      "value" : "bind:Widgets.gridCodeSets.selecteditem.id"
     } ],
     "pageTransitions" : "none"
   },
@@ -665,7 +665,7 @@
     "dataSet" : [ {
       "type" : "integer",
       "target" : "CodeSetId",
-      "value" : "bind:Widgets.gridCodeSets.selecteditem.codeSetId"
+      "value" : "bind:Widgets.gridCodeSets.selecteditem.id"
     } ],
     "pageTransitions" : "none"
   },
