--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,6 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
-                <directory>services/DocumentService/src</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <filtering>true</filtering>
                 <directory>services/DynamicFieldService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -91,6 +84,13 @@
             <resource>
                 <filtering>true</filtering>
                 <directory>services/InspectionService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/LetterService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
@@ -228,7 +228,6 @@
                                 <source>services/AddMultipleFeeToCart/src</source>
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/DocumentProxyService/src</source>
-                                <source>services/DocumentService/src</source>
                                 <source>services/DynamicFieldService/src</source>
                                 <source>services/FileService/src</source>
                                 <source>services/FormMessagingMailService/src</source>
@@ -237,6 +236,7 @@
                                 <source>services/InspectionMessagingMailService/src</source>
                                 <source>services/InspectionOutcomeUpdate/src</source>
                                 <source>services/InspectionService/src</source>
+                                <source>services/LetterService/src</source>
                                 <source>services/MapMultipleFeesWithTransaction/src</source>
                                 <source>services/ProjectMessagingMailService/src</source>
                                 <source>services/ProjectTaskAssignment/src</source>
@@ -439,11 +439,23 @@
             <version>4.5.3</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+        <dependency>
             <groupId>DBUtils</groupId>
             <artifactId>DBUtils</artifactId>
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/DBUtils.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>Letters</groupId>
+            <artifactId>Letters</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/Letters.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>fontbox-2.0.5</groupId>
