--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/DocumentService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/DynamicFieldService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -84,6 +91,13 @@
             <resource>
                 <filtering>true</filtering>
                 <directory>services/InspectionService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/LetterService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
@@ -221,6 +235,7 @@
                                 <source>services/AddMultipleFeeToCart/src</source>
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/DocumentProxyService/src</source>
+                                <source>services/DocumentService/src</source>
                                 <source>services/DynamicFieldService/src</source>
                                 <source>services/FileService/src</source>
                                 <source>services/FormMessagingMailService/src</source>
@@ -229,6 +244,7 @@
                                 <source>services/InspectionMessagingMailService/src</source>
                                 <source>services/InspectionOutcomeUpdate/src</source>
                                 <source>services/InspectionService/src</source>
+                                <source>services/LetterService/src</source>
                                 <source>services/MapMultipleFeesWithTransaction/src</source>
                                 <source>services/ProjectMessagingMailService/src</source>
                                 <source>services/ProjectTaskAssignment/src</source>
