- Hopefully fixed (again) the damn Google maps widget for test - Letters can now be generated from the Letters tab on the form viewing page (which was named Forms for a pleb reason) New files added - [LetterService,Letters.jar] Files modified - [_viewForm,EditForm,FindForm,googlemaps,pom.xml,project-services.xml] Removed files - [Google_reCAPTCHA]

--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,6 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
-                <directory>services/DocumentService/src</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <filtering>true</filtering>
                 <directory>services/DynamicFieldService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -235,7 +228,6 @@
                                 <source>services/AddMultipleFeeToCart/src</source>
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/DocumentProxyService/src</source>
-                                <source>services/DocumentService/src</source>
                                 <source>services/DynamicFieldService/src</source>
                                 <source>services/FileService/src</source>
                                 <source>services/FormMessagingMailService/src</source>
@@ -457,6 +449,13 @@
             <version>1.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/DBUtils.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>Letters</groupId>
+            <artifactId>Letters</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/Letters.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>fontbox-2.0.5</groupId>
