-Partial for ViewProjects -Updates for INBOX New files added - [_viewProject] Files modified - [MyMessages,ViewProject,pom.xml,pages-config.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -358,6 +358,13 @@
     "type" : "string"
   } ]
 }, {
+  "name" : "_viewProject",
+  "type" : "PARTIAL",
+  "params" : [ {
+    "name" : "ProjectGUID",
+    "type" : "string"
+  } ]
+}, {
   "name" : "dynamicFieldEditor",
   "type" : "PARTIAL",
   "params" : [ {
